# DLSimulationCostModel

./: README.md
config/: dg_polygon_3ns27_blk1.csv  dl_polygon_3ns27_blk1.csv  dp_polygon_3ns27.csv  test_config.cfg  test_config.cfg~  test_dl_seq.csv  test_dl_seq_3ns27.csv~
data/: 3ns27_designProfile_2x2.xyz  3ns27_designProfile_2x2_20obd.xyz  3ns27_designProfile_2x2_25obd.xyz  3ns27_designProfile_2x2_30obd.xyz  3ns27_designProfile_2x2_block.xyz  3ns27_initialTerrain_2x2_keyRemoved.xyz  3ns27_initialTerrain_5x5_keyRemoved.xyz
libs/: CMakeLists.txt  CMakeLists.txt~
libs/Geom/: CMakeLists.txt  CMakeLists.txt~  GeomDigging.cpp  GeomDigging.cpp~  GeomDigging.h  GeomDigging.h~  GeomDumping.cpp  GeomDumping.cpp~  GeomDumping.h  GeomDumping.h~
libs/Necessity/: CMakeLists.txt  CMakeLists.txt~  Cost.cpp  Cost.cpp~  Cost.h  Cost.h~  DataOperation.cpp  DataOperation.cpp~  DataOperation.h  DataOperation.h~  DataStruct.cpp  DataStruct.cpp~  DataStruct.h  DataStruct.h~  IO.cpp  IO.h  OptDataComputation.cpp  OptDataComputation.h
test/: #test.cpp#  CMakeLists.txt  CMakeLists.txt~  CostModelVerification.cpp~  test.cpp  test.cpp~
